--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.generalmobile</groupId>
     <artifactId>google-drive-upload</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>1.5.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <name>Google Drive Uploader</name>
@@ -20,25 +20,59 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.50</version>
+        <version>3.37</version>
     </parent>
 
     <properties>
         <java.level>8</java.level>
-        <jenkins.version>2.138.4</jenkins.version>
+        <jenkins.version>2.249.1</jenkins.version>
         <excludedGroups>junit.GoogleDriveIntegrationTest</excludedGroups> 
+		<google-oauth.version>1.0.0</google-oauth.version>
+		<google-api-services-drive.version>v3-rev197-1.25.0</google-api-services-drive.version>
+		<google-oauth-client-jetty.version>1.31.0</google-oauth-client-jetty.version>
+		<org.slf4j.version>1.7.30</org.slf4j.version>
     </properties>
 
     <dependencies>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-annotations</artifactId>
+			<version>3.1.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${org.slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>${org.slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${org.slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>${org.slf4j.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>google-oauth-plugin</artifactId>
-            <version>0.9</version>
+            <version>${google-oauth.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-drive</artifactId>
-            <version>v3-rev162-1.24.1</version>
+            <version>${google-api-services-drive.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
